# iamcar

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  STM32F411CEUX_FLASH.ld  flash.sh  memory.x
.cargo/: config.toml
core/inc/: FreeRTOSConfig.h  spi.h  tim.h
core/src/: bsp.c  rcc.c  spi.c  tim.c  usb_descriptors.c
drivers/led/: led.h
drivers/motor/: CMakeLists.txt  motor.h
drivers/nrf24l01/: nrf24l01.h
modules/led_controller/: led_controller.c
modules/motor_controller/: CMakeLists.txt  motor_controller.c  motor_controller.h
modules/rc_controller/: rc_controller.c
modules/usbd_controller/: CMakeLists.txt  usbd_controller.c
rtos/: rtos.c  rtos.h
src/: main.rs
src/data_types/: mod.rs
src/tasks/: mod.rs  motor.rs  rc.rs  servo.rs
